--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,20 @@
 version: '3'
 services:
   db:
-    image: postgres
+    image: postgres:9.5
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
-    environment:
-      POSTGRES_PASSWORD: <%= Rails.application.credentials.postgres_password %>
+    restart: always
+    env_file:
+      - .env
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'; env"
     volumes:
       - .:/myapp
     ports:
       - "3000:3000"
     depends_on:
       - db
+    env_file:
+      - .env
