--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ before_install:
 - sudo mv docker-compose /usr/local/bin
 script:
 - docker-compose build
-- docker-compose run test
+- docker-compose up
