--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_install:
 script:
 - docker-compose build
 - docker-compose up
-- docker-compose web run rails generate rspec:install
+- docker-compose run web rails generate rspec:install
