--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ before_install:
 - chmod +x docker-compose
 - sudo mv docker-compose /usr/local/bin
 script:
-- docker-compose build
-- docker-compose up
+- docker-compose build -f docker-compose-test.yml
+- docker-compose up -f docker-compose-test.yml
 - docker-compose run web bundle exec rspec
