--- a/config/spree_storefront.yml
+++ b/config/spree_storefront.yml
@@ -1,5 +1,20 @@
 default:
   navigation:
+    - title: Tech
+      subtitle: Categories
+      url: /t/tech
+      items:
+        - :title: Bluetooth earphones
+          :url: /t/tech/bluetooth_earphones
+      promo_banners:
+        - subtitle: New arrivals
+          title: Autumm 2020
+          url: /t/new-arrivals/Autumm-2020
+          image: 'meganav/promo_banner_left-first-category.jpg'
+        - subtitle: Special Offers
+          title: Get up to 30% off
+          url: /t/special-offers/30-off
+          image: 'meganav/promo_banner_right-first-category.jpg'
     - title: Women
       subtitle: Categories
       url: /t/women
@@ -18,8 +33,8 @@ default:
           :url: /t/women/jackets-and-coats
       promo_banners:
         - subtitle: New collection
-          title: Summer 2019
-          url: /t/new-collection/summer-2019
+          title: Autumm 2020
+          url: /t/new-collection/Autumm-2020
           image: 'meganav/promo_banner_left-first-category.jpg'
         - subtitle: Special Offers
           title: Get up to 30% off
@@ -39,8 +54,8 @@ default:
           :url: /t/men/jackets-and-coats
       promo_banners:
         - subtitle: New collection
-          title: Summer 2019
-          url: /t/new-collection/summer-2019
+          title: Autumm 2020
+          url: /t/new-collection/Autumm-2020
           image: 'meganav/promo_banner_left-second-category.jpg'
         - subtitle: Special Offers
           title: Get up to 30% off
@@ -58,8 +73,8 @@ default:
           :url: /t/sportswear/pants
       promo_banners:
         - subtitle: New collection
-          title: Summer 2019
-          url: /t/new-collection/summer-2019
+          title: Autumm 2020
+          url: /t/new-collection/Autumm-2020
           image: 'meganav/promo_banner_left-third-category.jpg'
         - subtitle: Special Offers
           title: Get up to 30% off
