--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ before_install:
 - chmod +x docker-compose
 - sudo mv docker-compose /usr/local/bin
 script:
-- docker-compose -f docker-compose-test.yml build 
-- docker-compose -f docker-compose-test.yml up 
-- docker-compose -f docker-compose-test.yml run web bundle exec rspec
+- docker-compose -f docker-compose.yml build 
+- docker-compose -f docker-compose.yml up 
+- docker-compose -f docker-compose.yml run web bundle exec rspec
 deploy:
   provider: heroku
   api_key:
