--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,9 @@
 version: '3'
 services:
-  db:
-    image: postgres:9.5
-    volumes:
-      - ./tmp/db:/var/lib/postgresql/data
-    restart: always
-    env_file:
-      - ./config/credentials.yml.enc
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'; env"
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/myapp
     ports:
       - "3000:3000"
-    depends_on:
-      - db
-    env_file:
-      - ./config/credentials.yml.enc
