--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  url: <%= Rails.application.credentials.DATABASE_URL! %>
+  url: <%= Rails.application.credentials.DATABASE_URL %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 development:
   <<: *default
@@ -11,4 +11,4 @@ test:
   database: myapp_test
 production:
   <<: *default
-  url: <%= Rails.application.credentials.DATABASE_URL! %>
+  url: <%= Rails.application.credentials.DATABASE_URL %>
