--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_install:
 script:
 - docker-compose build
 - docker-compose up -d
+- docker-compose run web rails db:create
+- docker-compose run web rails db:migrate
 - docker-compose run web bundle exec rspec
 deploy:
   provider: heroku
