--- a/config/database.yml
+++ b/config/database.yml
@@ -6,8 +6,10 @@ default: &default
   password: password
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 development:
-  <<: *default
-  database: myapp_development
+  adapter: sqlite3
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
+  database: db/development.sqlite3
 test:
   <<: *default
   database: myapp_test
