--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ script:
 - docker-compose build
 - docker-compose up -d
 - docker-compose run web rails db:create
+- rails spree:install:migrations
+- rails active_storage:update
 - docker-compose run web rails db:migrate
 - docker-compose run web bundle exec rspec
 deploy:
