--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "@rails/actioncable": "^6.1.3-1",
     "@rails/activestorage": "^6.1.3-1",
     "@rails/ujs": "^6.1.3-1",
-    "@rails/webpacker": "5.4.3",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   },
   "version": "0.1.0",
-  "devDependencies": {
-    "webpack": "^5.0.0",
-    "webpack-dev-server": "^3.11.0"
+  "devDependencies": {},
+  "scripts": {
+    "build": "webpack --config ./config/webpack/webpack.config.js"
   }
 }
