--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,9 @@ yarn-debug.log*
 # Ignore env files
 *.env
 
+# Ignore builds files
 /app/assets/builds/*
 !/app/assets/builds/.keep
+
+# Ignore DS_Store files
+*.DS_Store
