--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,8 +39,7 @@ jobs:
     steps:
       - checkout
       - heroku/deploy-via-git
-      - run:
-          command: rake db:migrate
+      - run: heroku run rails db:migrate
           
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
