--- a/.github/workflows/test_lint.yml
+++ b/.github/workflows/test_lint.yml
@@ -25,6 +25,7 @@ jobs:
         run: docker-compose run web bundle exec rspec
 
   lint:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
