--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,8 @@ yarn-debug.log*
 
 # Ignore DS_Store files
 *.DS_Store
+
+# Ignore Terraform files
+.terraform*
+terraform.tfstate*
+terraform.tfvars
