--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -10,9 +10,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Docker Compose
-        uses: docker/compose-cli-action@v0.7.2
-        with:
-          compose-version: 3.0.0
+        uses: isbang/compose-action@v1.4.1
 
       - name: Set up environment variables
         env:
